# RAG-Agent-with-Citation-Grounding

./: .env.example  .gitignore  Dockerfile  INSTALL.md  LICENSE  README.md  USAGE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: ingest_documents.py
src/: config.py  main.py
src/citation/: formatter.py  grounding.py
src/fallback/: web_search.py
src/generation/: llm_client.py  prompt_templates.py  response_parser.py
src/models/: confidence.py  schemas.py
src/monitoring/: logger.py  metrics.py
src/retrieval/: document_loader.py  retriever.py  vector_store.py
src/utils/: helpers.py
tests/: test_citation.py  test_confidence.py  test_generation.py  test_integration.py  test_retrieval.py
